--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-flatpickr": "^3.10.13",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3", 
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "openai": "^4.70.3"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
