--- a/package.json
+++ b/package.json
@@ -14,23 +14,26 @@
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
     "aos": "^3.0.0-beta.6",
+    "body-parser": "^1.20.3",
     "chart.js": "^4.4.1",
     "chartjs-adapter-moment": "^1.0.1",
-    "next": "^15.0.3",
-    "next-themes": "^0.3.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-flatpickr": "^3.10.13",
-    "typescript": "^5.3.3", 
-    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "openai": "^4.70.3"
+    "leaflet": "^1.9.4",
+    "next": "^15.0.3",
+    "next-themes": "^0.3.0",
+    "openai": "^4.70.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-flatpickr": "^3.10.13",
+    "react-leaflet": "^4.2.1",
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
     "@types/aos": "^3.0.7",
+    "@types/leaflet": "^1.9.14",
     "@types/react-flatpickr": "^3.8.11",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
