--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "^15.0.3",
     "next-themes": "^0.3.0",
     "openai": "^4.70.3",
+    "puppeteer": "^23.10.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-flatpickr": "^3.10.13",
